# Arkanoid

./: .gitignore  Ball.cpp  Ball.h  CMakeLists.txt  IconPower.cpp  IconPower.h  Ladrillo.cpp  Ladrillo.h  LinkedList.h  Menu.cpp  Menu.h  Nodo.h  Playerbar.cpp  Playerbar.h  Queue.h  README.md  Shape.cpp  Shape.h  Stack.h  Textos.cpp  Textos.h  Vidas.cpp  Vidas.h  level.txt  main.cpp
textos/: level.txt  level1.txt  level2.txt  level3.txt  level4.txt  level5.txt  nombres.txt
